# agent-cow-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml  tests.yml
agentcow/: __init__.py  context.py
agentcow/blob/: README.md  __init__.py  context.py  interceptor.py  operations.py  paths.py
agentcow/blob/tests/: README.md  conftest.py  test_interceptor.py  test_operations.py  test_paths.py
agentcow/examples/: header_parsing_example.py
agentcow/postgres/: README.md  __init__.py  context.py  core.py  cow_sql_functions.py  operations.py  session.py  sql_functions.py  types.py
agentcow/postgres/examples/: basic_usage.py  sqlalchemy_example.py
agentcow/postgres/tests/: README.md  conftest.py  start-test-db.sh  test_postgres.py
agentcow/scoring/: README.md  __init__.py  comparators.py  compare.py  efficiency.py  entity_state.py  extraction.py  feedback.py  matching.py  op_utility.py  row_similarity.py  sample_evaluators.py  sample_scorers.py  scorer.py  scores.py  types.py
pg-lite/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
pg-lite/src/: cow.ts  index.ts  sql.ts  types.ts
pg-lite/src/db/: cow-setup.ts  pglite.ts
python-package/: README.md  pyproject.toml
python-package/examples/: basic_usage.py
python-package/src/agent_cow/postgres/: core.py  operations.py  session.py
scripts/: release.sh
