[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-cow"
dynamic = ["version"]
description = "Database Copy-On-Write for AI agent workspace isolation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Trail Team", email = "help@trail-ml.com"},
]
keywords = ["postgresql", "database", "ai", "agents", "copy-on-write", "isolation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
sqlalchemy = [
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
]
blob = [
    "boto3>=1.28.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-postgresql>=6.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "boto3>=1.28.0",
    "moto[s3]>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/trail-ml/agent-cow-python"
Repository = "https://github.com/trail-ml/agent-cow-python"
Issues = "https://github.com/trail-ml/agent-cow-python/issues"

[tool.hatch.version]
path = "agentcow/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["agentcow"]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-postgresql>=8.0.0",
    "moto[s3]>=5.0.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
