[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-cow"
version = "0.1.0"
description = "PostgreSQL Copy-On-Write for AI agent workspace isolation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Trail Team", email = "help@trail-ml.com"},
]
keywords = ["postgresql", "database", "ai", "agents", "copy-on-write", "isolation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-postgresql>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/trail-ml/agent-cow"
Repository = "https://github.com/trail-ml/agent-cow"
Issues = "https://github.com/trail-ml/agent-cow/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_cow"]
